--- a/index.css
+++ b/index.css
@@ -40,39 +40,23 @@ body {
     padding-right: 2.5%;
   }
   
-  h2 {
-    text-align: center;
-    margin-block-end: 0;
-  }
-  
-  .add_book {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  .add {
-    align-self: flex-end;
-  }
-  
   .booklist {
     display: flex;
     flex-direction: column;
     border: 2px solid black;
     width: 50%;
+    max-height: 370px;
+    overflow-y: auto;
     margin: auto;
+    padding: 0;
+  }
+  
+  h2 {
+    text-align: center;
   }
   
   hr {
     margin-top: 20px;
-    width: 15%;
     height: 2px;
     background: black;
   }
@@ -84,6 +68,15 @@ body {
     padding-left: 1em;
     padding-right: 1em;
     border: 1px solid gray;
+    margin: 0;
+  }
+  
+  .book-item:nth-child(odd) {
+    background: #e7e9eb;
+  }
+  
+  .book-item:nth-child(even) {
+    background: #fff;
   }
   
   .remove {
@@ -91,17 +84,33 @@ body {
     margin-left: auto;
   }
   
-  .title {
-    margin-right: 5px;
+  .add_book {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  
+  .book_input {
+    display: block;
+    margin: 0.5rem 0;
+  }
+  
+  .add {
+    display: block;
+    margin-left: auto;
+  }
+  
+  .author {
+    padding-left: 0.25rem;
   }
   
   footer {
     border: 2px solid black;
-    margin: auto;
-    margin-bottom: 1.5em;
     width: 90%;
-    margin-top: 55vh;
     padding: 5px 2.5%;
+    position: fixed;
+    bottom: 4px;
+    right: 2.5%;
+    left: 2.5%;
   }
   
   .contact {
@@ -113,6 +122,5 @@ body {
     margin-top: 20px;
   }
   
-  .dn {
-    display: none;
-  }
+  .dn { display: none; }
+  .blue { color: blue; }
